atualização de pastas
atualizando pastas para github pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <script src="../javascript/index.js" defer></script>
-  <link rel="stylesheet" href="../css/style.css">
+  <script src="index.js" defer></script>
+  <link rel="stylesheet" href="style.css">
   <a href="https://wa.me/5511987034581" class="whatsapp-float" target="_blank">💬</a>
   <title>Guincho Ivan Santiago 24h</title>
 </head>
@@ -23,9 +23,9 @@
     <!-- Slider de Imagens -->
     <div class="slider-container">
       <div class="slider" id="imageSlider">
-        <div class="slide" style="background-image: url('../imagens/ivan\ logo.jpeg')"></div>
-        <div class="slide" style="background-image: url('../imagens/guincocarro.jfif')"></div>
-        <div class="slide" style="background-image: url('../imagens/carroguincho2.jfif')"></div>
+        <div class="slide" style="background-image: url('ivan\ logo.jpeg')"></div>
+        <div class="slide" style="background-image: url('carroguincho2.jfif')"></div>
+        <div class="slide" style="background-image: url('guincocarro.jfif')"></div>
       
       </div>
       <div class="slider-nav" id="sliderNav"></div>
